...
        <!--Application-->
        <scene sceneID="JPo-4y-FX3">
            <objects>
                <application id="hnw-xV-0zn" sceneMemberID="viewController">
                    <menu key="mainMenu" title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
                        <items>
                            <menuItem title="Covid Patients" id="1Xt-HY-uBw">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <menu key="submenu" title="Covid Patients" systemMenu="apple" id="uQy-DD-JDr">
                                    <items>
                                        <menuItem title="About Covid Patients" id="5kV-Vb-QxS">
                                            <modifierMask key="keyEquivalentModifierMask"/>
                                            <connections>
...
                                <textFieldCell key="cell" lineBreakMode="clipping" title="Test Type:" id="FEx-qF-MTg">
                                    <font key="font" metaFont="system"/>
                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                </textFieldCell>
                            </textField>
                            <textField identifier="nameField" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Bl0-fM-dNb">
                                <rect key="frame" x="174" y="209" width="223" height="21"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="21" id="Hfx-wj-hl0"/>
                                    <constraint firstAttribute="width" constant="223" id="KQA-nS-L2l"/>
                                </constraints>
                                <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" borderStyle="bezel" identifier="nameField" placeholderString="Enter Name" drawsBackground="YES" id="dCU-MY-keS">
...
                                <textFieldCell key="cell" lineBreakMode="clipping" title="Test Result:" id="dwL-0y-yEX">
                                    <font key="font" metaFont="system"/>
                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                </textFieldCell>
                            </textField>
                            <button identifier="savePatient" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="vZZ-Ke-iN0">
                                <rect key="frame" x="403" y="3" width="64" height="32"/>
                                <buttonCell key="cell" type="push" title="Save" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="NFN-mH-O7H">
                                    <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                    <font key="font" metaFont="system"/>
                                </buttonCell>
                                <color key="bezelColor" name="AccentColor"/>
...
                                    <scrollView autohidesScrollers="YES" horizontalLineScroll="24" horizontalPageScroll="10" verticalLineScroll="24" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nQJ-dE-CC6">
                                        <rect key="frame" x="311" y="0.0" width="335" height="262"/>
                                        <clipView key="contentView" ambiguous="YES" id="QVI-6L-hLk">
                                            <rect key="frame" x="1" y="1" width="333" height="260"/>
                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                            <subviews>
                                                <tableView identifier="patientsTable" verticalHuggingPriority="750" ambiguous="YES" allowsExpansionToolTips="YES" columnResizing="NO" multipleSelection="NO" autosaveColumns="NO" rowHeight="24" usesAutomaticRowHeights="YES" headerView="bfo-FT-yQd" viewBased="YES" id="t0O-Io-Rm4">
                                                    <rect key="frame" x="0.0" y="0.0" width="333" height="232"/>
                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                    <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                                    <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                                    <tableColumns>
                                                        <tableColumn identifier="Name" width="108" minWidth="40" maxWidth="1000" id="2Hp-n7-4bc">
...
                            </button>
                            <segmentedControl verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Dik-03-zs7">
                                <rect key="frame" x="312" y="18" width="69" height="23"/>
                                <segmentedCell key="cell" borderStyle="border" alignment="left" style="smallSquare" trackingMode="momentary" id="Oks-1R-FiX">
                                    <font key="font" metaFont="system"/>
                                    <segments>
                                        <segment label="add" image="NSAddTemplate" width="32"/>
                                        <segment image="NSRemoveTemplate" width="32" tag="1"/>
                                    </segments>
                                </segmentedCell>
                                <connections>
                                    <action selector="addDeleteAction:" target="XfG-lQ-9wD" id="YiG-fo-4F3"/>
                                </connections>
...
